--- a/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatística_Parte_1.ipynb
@@ -2884,7 +2884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2894,12 +2894,25 @@
     "id": "QW4JPcBmX7IA",
     "outputId": "45810cfa-fba2-4bf3-b571-eddd9d8ebd09"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.714285714285714"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(8 + 10 + 4 + 8 + 6 + 10 + 8) / 7"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2909,12 +2922,25 @@
     "id": "LuT8WNy5X7IB",
     "outputId": "1fde4b44-b250-41d9-ff02-70c9a0e05aca"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.714285714285714"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Fulano'].mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2924,12 +2950,25 @@
     "id": "BRMZcmMEjQMQ",
     "outputId": "5f3334d9-0f5f-40e2-e2b7-191e0bc3a5d6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000.3831988547631"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Renda.mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2939,8 +2978,24 @@
     "id": "CGgJbsK0HBQc",
     "outputId": "35b8a334-5f7d-4f17-ec85-2e10ec6ae5ab"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sexo\n",
+       "0    2192.441596\n",
+       "1    1566.847393\n",
+       "Name: Renda, dtype: float64"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.groupby(['Sexo'])['Renda'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
